--- a/one_page.html
+++ b/one_page.html
@@ -72,6 +72,17 @@
 
     <div class="page p-2">
         <h1 class="slogan">課程顧問</h1>
+        <div class="flow">
+            <div class="flow-item">
+                <div class="item-circle"></div>
+                <div class="item-content">豐原以前是葫蘆墩</div>
+            </div>
+            <div class="flow-item">
+                <div class="item-circle"></div>
+                <div class="item-content">我是豐原小可愛</div>
+            </div>
+        </div>
+    </div>
     </div>
 
     <footer class="footer">
