--- a/zz.html
+++ b/zz.html
@@ -6,6 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ZZ</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;200;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/zz.css">
 </head>
@@ -18,9 +23,19 @@
                     <img src="/image/logo.png" alt="LOGO">
                 </div>
                 <div class="right-side">
-                    <div class="menu">MENU</div>
-                    <div class="link-button">
-                        <li>
+                    <div class="menu">
+                        <ul>
+                            <li>
+                                <a href="#">探索</a>
+                            </li>
+                            <li>
+                                <a href="#">提案</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="buttons">
+                        <ul class="link-button">
+                            <li>
                             <a href="#">登入</a>
                         </li>
                         <li>
@@ -36,11 +51,45 @@
     </div>
 </div>
 </div>
-<!-- <div class="ff">
-<div class="f1"></div>
-<div class="w100"></div>
-<div class="f2"></div>
-</div> -->
+<div class="main"></div>
+<div class="footer">
+    <div class="container">
+        <div class="top-side">
+<div><img src="/image/logo.png" alt="LOGO"></div>
+<div class="menu">
+    <div>
+        <h2 class="menu-title">幫助</h2>
+        <ul class="menu-item">
+            <li>
+                <a href="#">如何</a>
+            </li>
+            <li>
+                <a href="#">找到</a>
+            </li>
+            <li>
+                <a href="#">小可愛家</a>
+            </li>
+        </ul>
+    </div>
+    <div>
+        <h2 class="menu-title">關於</h2>
+        <ul class="menu-item">
+            <li>
+                <a href="#">小可愛</a>
+            </li>
+            <li>
+                <a href="#">的家鄉</a>
+            </li>
+            <li>
+                <a href="#">在豐原</a>
+            </li>
+        </ul>
+    </div>
+</div>
+</div>
+</div>
+<div class="copyright"><span class="copyright-icon">&copy;</span>ZZ股份有限公司</div>
+</div>
 </body>
 
 </html>
