--- a/one_page.html
+++ b/one_page.html
@@ -8,6 +8,8 @@
     <title>One Page</title>
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/one_page.css">
+    <link rel="stylesheet" href="/css/berger.css">
+    <link rel="stylesheet" href="/css/phone.css">
 </head>
 
 <body>
@@ -38,6 +40,11 @@
                             </a>
                         </li>
                     </ul>
+                </div>
+                <div class="mobile-menu-switch">
+                    <span></span>
+                    <span></span>
+                    <span></span>
                 </div>
             </div>
         </div>
