--- a/bs_demo.html
+++ b/bs_demo.html
@@ -1,13 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bookstrap</title>
+    <title>Bootstrap</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+    <style>
+        .col-item {
+            padding: 10px;
+            background: red;
+        }
+    </style>
 </head>
+
 <body>
-    <h1>h1</h1>
+
+
+    <div class="container">
+        <div class="row custom">
+            <div class="col-6 col-sm">
+                <div class="col-item">1</div>
+            </div>
+            <div class="col-6 col-sm">
+                <div class="col-item">2</div>
+            </div>
+            <div class="col-6 col-sm">
+                <div class="col-item">3</div>
+            </div>
+            <div class="col-6 col-sm">
+                <div class="col-item">4</div>
+            </div>
+        </div>
+    </div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
 </html>
