嘖嘖網站右邊字

--- a/indexx.html
+++ b/indexx.html
@@ -49,9 +49,42 @@
         <div class="container">
             <div class="product-information-wrap">
                 <div class="product-information-video">
-                    <img src="assets/images/banner.png" alt="">
+                    <img src="/image/banner.png" alt="">
                 </div>
-                <div class="product-information-text">我是豐原小可愛</div>
+                <div class="product-information-text">
+                    <div>
+                        <ul class="category">
+                            <li>豐原小可愛</li>
+                        </ul>     
+                    <ul class="category-nav">                  
+                        <li>
+                            <a href="#">群眾募資</a>
+                        </li>
+                        <li>
+                            <a href="#">設計</a>
+                        </li>
+                    </ul>
+                    <span>提案人</span>
+                    <span class="author-name">豐原小可愛</span>
+                    <h1 class="product-name">[S+ PURE Pro 第三代]</h1>
+                    <div class="project-process">
+                        <div>
+                            <div class="goal-percentage">1,757%</div>
+                        </div>
+                        <div>
+                            <div class="project-goal">目標 NT$50,000</div>
+                            <div class="project-current">NT% 878,554</div>
+                            <div class="project-count">
+                                <div>
+                                    <span>icon</span>
+                                    <span>720 人</span>
+                                </div>
+                                <div>
+                                    <span>icon</span>
+                                    <span>2 天</span>
+                    </div>
+                </div>
+                </div>
             </div>
         </div>
     </div>
